[build] initial jpackage configuration