@@ -210,14 +210,29 @@ configure(project(':app:fx')) {
             // start scripts created by the application plugin are overwritten by the
             // org.beryx.runtime plugin, thus custom settings must be configured here as
             // opposed to in the usual `startScripts` closure
-            jvmArgs = [ '--add-modules=javafx.controls' ]
             if (project.hasProperty(javafxSdkProperty))
                 jvmArgs += "--module-path=${project.getProperty(javafxSdkProperty)}/lib"
         }
+
         jpackage {
+            def currentOs = org.gradle.internal.os.OperatingSystem.current()
+            def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
             imageName = 'bisqfx'
             installerName = 'bisqfx'
             appVersion = rootProject.appVersion
+            imageOptions += ['--icon', "src/main/jpackage/icons/bisqfx.$imgType"]
+            installerOptions += ['--resource-dir', "src/main/resources"]
+            installerOptions += ['--vendor', 'Bisq']
+
+            if (currentOs.windows) {
+                installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+            } else if (currentOs.linux) {
+                installerOptions += ['--linux-package-name', 'bisqfx', '--linux-shortcut']
+            } else if (currentOs.macOsX) {
+                installerOptions += ['--mac-package-name', 'bisqfx']
+                if (project.hasProperty(javafxSdkProperty))
+                    jvmArgs += "--module-path=${project.getProperty(javafxSdkProperty)}/lib"
+            }
         }
     }
 
